[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/main/connecting_overlay.gd" id="1"]

[node name="ConnectingOverlay" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.118, 0.125, 0.141, 1)
mouse_filter = 2
script = ExtResource("1")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="StatusLabel" type="Label" parent="CenterContainer/VBox"]
layout_mode = 2
text = "Connecting to servers..."
horizontal_alignment = 1
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.85, 0.85, 0.85, 1)

[node name="DetailLabel" type="Label" parent="CenterContainer/VBox"]
layout_mode = 2
text = ""
horizontal_alignment = 1
theme_override_font_sizes/font_size = 13
theme_override_colors/font_color = Color(0.58, 0.608, 0.643, 1)

[node name="DotsHBox" type="HBoxContainer" parent="CenterContainer/VBox"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 4
